--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="fullcontent">
     <header class="header">
       <div class="header__left-block">
         <div class="header__logo">
@@ -38,7 +39,7 @@
       <div class="container">
         <div class="tabcontainer">
           <div class="tabcontent">
-            <img src="img/kyiv/13.jpg" alt="kyiv" />
+            <img src="img/kyiv/13.jpeg" alt="kyiv" />
             <div class="tabcontent__descr">
              Kyiv is the capital and the largest city of Ukraine located on the Dnieper River, in the north of the central part of the country. It is Ukraine's most significant cultural, political, socio-economic, transport, scientific, and religious center. The city is the administrative center of the Kyiv region.
             </div>
@@ -50,7 +51,7 @@
             </div>
           </div>
           <div class="tabcontent">
-            <img src="img/kyiv/18.jpg" alt="kyiv img" />
+            <img src="img/kyiv/18.jpeg" alt="kyiv img" />
             <div class="tabcontent__descr">
 Kyiv is a large industrial center of Ukraine with enterprises in the light and food industry, printing, pharmaceuticals, engineering, metallurgy, and aircraft building. The services sector mainly contributes to the local economy - transport and communications, small and wholesale trade, real estate, legal and financial services.            </div>
           </div>
@@ -75,7 +76,7 @@ Kyiv is a large industrial center of Ukraine with enterprises in the light and f
            Kyiv - the city where everything begins!</div>
       <!-- </div> -->
     </div>
-
+</div>
 
     <div class="offer">
       <div class="bgc_y"></div>
@@ -104,7 +105,7 @@ Kyiv is a large industrial center of Ukraine with enterprises in the light and f
               <li>
                 National Art Museum of Ukraine
               </li>
-              <li>Kiev Pechersk Lavra Monastery
+              <li>Kyiv Pechersk Lavra Monastery
               </li>
               <li>
                 Mariyinsky Palace
@@ -143,13 +144,13 @@ Kyiv is a large industrial center of Ukraine with enterprises in the light and f
           <div class="offer__slider-wrapper">
             <div class="offer__slider-inner">
               <div class="offer__slide">
-                <img src="img/kyiv/1.jpg" alt="sight1" />
+                <img src="img/kyiv/1.jpeg" alt="sight1" />
               </div>
               <div class="offer__slide">
-                <img src="img/kyiv/10.jpg" alt="sight2" />
+                <img src="img/kyiv/10.jpeg" alt="sight2" />
               </div>
               <div class="offer__slide">
-                <img src="img/kyiv/4.jpg" alt="sight3" />
+                <img src="img/kyiv/4.jpeg" alt="sight3" />
               </div>
               <div class="offer__slide">
                 <img src="img/kyiv/17.png" alt="sight4" />
@@ -168,14 +169,14 @@ Kyiv is a large industrial center of Ukraine with enterprises in the light and f
         <div class="visit__field">
             <div class="container">
                 <div class="visit__item">
-                    <img src="img/kyiv/14.jpg" alt="sight5">
+                    <img src="img/kyiv/14.jpeg" alt="sight5">
                     <h3 class="visit__item-subtitle">Kyiv Pechersk Lavra</h3>
                     <div class="visit__item-descr">The oldest monastery of Rus, the main center of Russian Orthodoxy, is an object of world cultural heritage under the protection of UNESCO. The monastery was founded by the Monk Anthony of Caves as a cave monastery in 1051. The Great Lavra Bell Tower (96.5 meters, 374 steps), built-in 1731-1745.</div>
                     <div class="visit__item-divider"></div>
                    
                 </div>
                 <div class="visit__item">
-                    <img src="img/kyiv/16.jpg" alt="sight6">
+                    <img src="img/kyiv/16.jpeg" alt="sight6">
                     <h3 class="visit__item-subtitle">National Museum of the History of Ukraine in the Second World War</h3>
                     <div class="visit__item-descr">This grandiose memorial complex was built in 1981. The colossal 62-meter statue of the Motherland (102 meters with the pedestal), made of special stainless steel, is one of the symbols of Kyiv.
 </div>
@@ -183,7 +184,7 @@ Kyiv is a large industrial center of Ukraine with enterprises in the light and f
                     
                 </div>
                 <div class="visit__item">
-                    <img src="img/kyiv/11.jpg" alt="sight7">
+                    <img src="img/kyiv/11.jpeg" alt="sight7">
                     <h3 class="visit__item-subtitle">Volodymyrska Hill Park</h3>
                     <div class="visit__item-descr">Volodymyr The Great Monument (1853) - the oldest sculptural monument in Kyiv, one of the symbols of the city located in Volodymyrska Hill Park.  Also, you can enjoy a wonderful city view from cities hills.
 </div>
